@@ -2,6 +2,8 @@ Revision history for Dist::Zilla::PluginBundle::Apocalyptic
 
 {{$NEXT}}
 
+	Dropped the use of the DualBuilders plugin in favor of MakeMaker::Fallback and ModuleBuildTiny ( thanks ETHER! )
+
 0.004	2014-10-25 20:25:39 UTC
 
 	Added a bunch of plugins! wheee :)
